@@ -246,6 +246,7 @@
  * RateBasedBackPressure unnecessarily invokes a lock on the Guava RateLimiter (CASSANDRA-14163)
  * Fix wildcard GROUP BY queries (CASSANDRA-14209)
 Merged from 3.0:
+ * Fix progress stats and units in compactionstats (CASSANDRA-12244)
  * Delay hints store excise by write timeout to avoid race with decommission (CASSANDRA-13740)
  * Add missed CQL keywords to documentation (CASSANDRA-14359)
  * Fix unbounded validation compactions on repair / revert CASSANDRA-13797 (CASSANDRA-14332)
